# Geant4_tutorial

./: README.md
EDX/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EDX.cc  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.jmf  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  edx_spectrum_penelope_air.csv  plot_spectrum.m  plot_spectrum.py  vis.mac
EDX_measurements/: README.md
EDX_measurements/center_20keV_1nA/: Center_20kV_1nA.p_s  Center_20kV_1nA_pt1.psmsa  Center_20kV_1nA_pt2.psmsa  Center_20kV_1nA_pt3.psmsa  go.m
EDX_measurements/ring_20kV_1nA/: README.md  Ring_20kV_1nA.psmsa
EDX_measurements/side_20kV_1nA/: README.md  Side_20kV_1nA.p_s  Side_20kV_1nA_pt1.psmsa  Side_20kV_1nA_pt2.psmsa  Side_20kV_1nA_pt3.psmsa  Side_20kV_1nA_pt4.psmsa  spectra.eps
MuonCoincidence/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  MuonCoincidence.cc  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  SensitiveDetector.cc  SensitiveDetector.hh  vis.mac
